--- a/templates/examples.html
+++ b/templates/examples.html
@@ -1,10 +1,13 @@
 <h3>Example Good Task Request</h3>
 <p>
-  Call the Costco location closest to my shipping address, and ask if
-  they have Jasmine or Basmati rice. Email me the answer and the Costco
-  address.
+  Call the Costco location closest to my address, and ask if
+  they have Jasmine or Basmati rice. Email me the answer and the
+  Costco address.
 </p>
 <div class="pros">
-  When you make a payment to MicroTasking, we receive your Google<sup>TM</sup> Checkout
+  When you make a payment to MicroTasking, we receive your shipping address
+  from Google<sup>TM</sup> Checkout. Much of the time, that is sufficient
+  (If you require us to know another address, put it into your microtask).
+  
 </div>
 <div class="cons"></div>
