--- a/static/standard.css
+++ b/static/standard.css
@@ -125,5 +125,44 @@ h3 {
   color:#455772;
 }
 .ticket li {
-  list-style: none;
+  list-style:none;
+}
+
+div.quote {
+  font-size:0.8em;
+  width:200px;
+  border:1px solid gray;
+  margin-left:480px;
+  padding:15px;
+  font-style:italic;
+  color:#455772;
+  background-color:#EEF1F5;
+  display:inline;
+  position:absolute;
+  top:210px;
+  /*right:0px;*/
+}
+
+div.quote strong {
+  color:black;
+  font-size:1.2em;
+}
+
+div#quote-1 {
+  /*width:100%;*/
+}
+
+div.quote span.credit {
+  display:block;
+  text-align:right;
+  padding-left:1em;
+  color:gray;
+  font-style:normal;
+}
+div.quote span.credit a {
+  color:gray;
+}
+
+div#quote-1 span.credit {
+  display:inline;
 }
