--- a/templates/privacy_policy.html
+++ b/templates/privacy_policy.html
@@ -4,8 +4,8 @@ Effective <b>7/17/2009</b>
 <ul>
 <li><a href="#1">Our Commitment To Privacy</a></li>
 <li><a href="#2">The Information We Collect</a></li>
-<li><a href="#3">Cookies</a></li>
 <li><a href="#4">How We Use Information</a></li>
+<li><a href="#3">Cookies</a></li>
 <li><a href="#5">Our Commitment To Data Security</a></li>
 <li><a href="#6">Our Commitment To Children's Privacy</a></li>
 <li><a href="#7">How To Access Or Correct Your Information</a></li>
@@ -22,10 +22,17 @@ Effective <b>7/17/2009</b>
 	<li>Address</li>
 	<li>Email address</li>
 	<li>Phone number</li>
-	<li>Credit/Debit Card Information</li>
 	<li>(etc.)</li>
 	</ul>
 </p>
+<p>We collect this information via the checkout mechanism. Please note that we <strong>DO NOT</strong> store credit card numbers, expiration dates, or security codes.</p>
+
+<a name="4"></a><h3>How We Use Information:</h3>
+<p>We use the information you provide about yourself when placing an order only to complete that order.  We do not share this information with outside parties except to the extent necessary to complete that order.</p>
+<!-- p>We offer gift-cards by which you can personalize a product you order for another person.  Information you provide to us to create a gift-card is only used for that purpose, and it is only disclosed to the person receiving the gift.</p -->
+<p>We use return email addresses to answer the email we receive and to contact user for purposes pertaining to executing the given task.  Such addresses are not used for any other purpose and are not shared with outside parties.</p>
+<p>We use non-identifying and aggregate information to better design our website and to share with advertisers. For example, we may tell an advertiser that X number of individuals visited a certain area on our website, or that Y number of men and Z number of women filled out our registration form, but we would not disclose anything that could be used to identify those individuals.</p>
+<p>Finally, we never use or share the personally identifiable information provided to us online in ways unrelated to the ones described above without also providing you an opportunity to opt-out or otherwise prohibit such unrelated uses.</p>
 
 <a name="3"></a><h3>Cookies:</h3>
 <p>A cookie is a unique identifier sent to your computer by a Web server and stored on your computer's hard drive. 
@@ -34,13 +41,6 @@ Effective <b>7/17/2009</b>
   with items of more value (productivity tools) as your experience with MircoTasking increases. Our cookies do not include any
   sensitive information. You may choose not to receive a cookie file by enabling your Web browser to refuse cookies or to prompt
   you before accepting a cookie.</p>
-
-<a name="4"></a><h3>How We Use Information:</h3>
-<p>We use the information you provide about yourself when placing an order only to complete that order.  We do not share this information with outside parties except to the extent necessary to complete that order.</p>
-<!-- p>We offer gift-cards by which you can personalize a product you order for another person.  Information you provide to us to create a gift-card is only used for that purpose, and it is only disclosed to the person receiving the gift.</p -->
-<p>We use return email addresses to answer the email we receive and to contact user for purposes pertaining to executing the given task.  Such addresses are not used for any other purpose and are not shared with outside parties.</p>
-<p>We use non-identifying and aggregate information to better design our website and to share with advertisers. For example, we may tell an advertiser that X number of individuals visited a certain area on our website, or that Y number of men and Z number of women filled out our registration form, but we would not disclose anything that could be used to identify those individuals.</p>
-<p>Finally, we never use or share the personally identifiable information provided to us online in ways unrelated to the ones described above without also providing you an opportunity to opt-out or otherwise prohibit such unrelated uses.</p>
 
 <a name="5"></a><h3>Our Commitment To Data Security</h3>
 <p>To prevent unauthorized access, maintain data accuracy, and ensure the correct use of information, we have put in place appropriate physical, electronic, and managerial procedures to safeguard and secure the information we collect online.</p>
