--- a/templates/about.html
+++ b/templates/about.html
@@ -1,3 +1,5 @@
+<div class="staticbox">
+
 <h3 id="definition">What is Microtasking?</h3>
 <p>
 	Microtasking (the concept) is the idea that you have better things to do with your 
@@ -19,3 +21,4 @@
 	More information about how microtasking works can be found in our <a href="/faq">FAQ</a>.
 </p>
 
+</div>
