--- a/templates/faq.html
+++ b/templates/faq.html
@@ -1,3 +1,5 @@
+<div class="staticbox">
+
 <h3 id="definition">What are Microtasks?</h3>
 <p>Any short (less than 1 hour) task that can be easily defined and delegated to someone else</p>
 
@@ -60,3 +62,6 @@
   Having said that, you might be surprised what can be accomplished in one hour's time by our <a href="#taskers">dedicated staff</a>.
   Your satisfaction is our highest priority, and we continually strive to complete every task dilligently and quickly.
 </p>
+
+</div>
+
