--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -1,3 +1,5 @@
+<div class="staticbox">
+
 Effective <b>7/17/2009</b>
 <p><b>Privacy Notice Table Of Contents:</b></p>
 
@@ -55,3 +57,6 @@ Effective <b>7/17/2009</b>
 
 <a name="8"></a><h3>How To Contact Us</h3>
 <p>Should you have other questions or concerns about these privacy policies, please <!-- call us at [phone number] or --> send us an email at contact@microtasking.net.</p>
+
+</div>
+
