--- a/static/standard.css
+++ b/static/standard.css
@@ -65,6 +65,7 @@ body {
 .middle {
 	background-color: white;
 	padding: 0 10px;
+	*padding: 10px;
 }
 * html .top, * html .bottom {
 	display: none; /* IE 6 */
@@ -75,7 +76,7 @@ body {
 	margin-bottom: 20px;
 }
 .form .middle, .info .middle {
-	height: 280px;
+	min-height: 280px;
 }
 .form p, .info p {
 	margin: 0;
@@ -104,8 +105,12 @@ body {
 	height: 100px;
 	padding: 5px;
 }
+.form .text {
+	width: 5em;
+	padding: 1px;
+}
 .checkout {
-	padding: 20px 0;
+	padding: 10px;
 	text-align: center;
 }
 .checkout input {
