--- a/templates/about.html
+++ b/templates/about.html
@@ -2,10 +2,9 @@
 
 <h3 id="definition">What is Microtasking?</h3>
 <p>
-	Microtasking (the concept) is the idea that you have better things to do with your 
-	time than every little task which comes along.  It is the process of sourcing out
-	small, well defined tasks and having them done remotely by someone else for a
-	resonable fee.
+	Microtasking (the concept) is the idea that your time is best spent on the
+	creative tasks which only you can do. The small, well definable task should
+	outsourced to a dedicated staff, allowing you to make the most of your time.
 </p>
 <p>
 	Microtasking<sup>sm</sup> (the company) is dedicated to facilitating the
@@ -21,4 +20,10 @@
 	More information about how microtasking works can be found in our <a href="/faq">FAQ</a>.
 </p>
 
+<h3 id="who">Who are you?</h3>
+<p>
+  The core MicroTasking team resides in the United States, in Boston and Indianapolis -
+  but we are staffed by the best and brightest world-wide. The Internet has no borders,
+  and neither do we.
+</p>
 </div>
