--- a/templates/faq.html
+++ b/templates/faq.html
@@ -1,7 +1,7 @@
 <div class="staticbox">
 
 <h3 id="definition">What are Microtasks?</h3>
-<p>Any short (less than 1 hour) task that can be easily defined and delegated to someone else</p>
+<p>Any short (between 1 to 4 hour) task that can be easily defined and delegated to someone else</p>
 
 <h3 id="why">Why?</h3>
 <p>Because you&apos;re busy.</p>
@@ -16,7 +16,7 @@
 
 <h3 id="ideas">What kinds of tasks can I delegate?</h3>
 <p>
-  Anything that can be done remotely in under an hour with more than 24 hours notice.
+  Anything that can be done remotely in 1 - 4 hours with more than 72 hours notice.
   Yes really, anything. Here are some examples:
   <ul>
     <li>List some information about digital projectors under $500 in a spreadsheet organized by price, name, and luminosity</li>
@@ -33,7 +33,7 @@
   We hand off the task to the members of our staff most qualified to do the job.
   If your task requires computer experience, you will get an IT graduate. The
   same pattern applies for anything from spot-checking documents, to making phone calls
-  on your behalf, <em>et cetera</em>. Anything that requires special knowledge will
+  on your behalf, <em>etc</em>. Anything that requires special knowledge will
   be given to a qualified Task Manager.
 </p>
 
@@ -53,10 +53,10 @@
   information about you.
 </p>
 
-<h3 id="time">What if my microtask takes more than one hour?</h3>
+<h3 id="time">What if my microtask takes more than four hours?</h3>
 <p>
-  At this time we focus exclusively on tasks that take an hour or less.  If your task would obviously take longer,
-  we will alert you by email before beginning any work and you will not be charged.
+  At this time we focus exclusively on tasks that take up to four hours. If we believe your task will
+  take longer, we will alert you by email before beginning any work and you will not be charged.
 </p>
 <p>
   Having said that, you might be surprised what can be accomplished in one hour's time by our <a href="#taskers">dedicated staff</a>.
