--- a/templates/outer.html
+++ b/templates/outer.html
@@ -6,7 +6,7 @@
 <link rel="shortcut icon" href="/static/images/{{ favicon }}" />
 <link rel="stylesheet" href="/static/base.css" type="text/css" media="screen" />
 <link rel="stylesheet" href="/static/{{ stylesheet }}.css" type="text/css" media="screen" />
-<title>Microtasking - {{ tagline }}</title>
+<title>Microtasking: {{ tagline }}</title>
 </head>
 <body>
 <div class="outer-wrapper">
@@ -19,10 +19,10 @@
 <p class="navbar">
   <a href="/{{ promo }}"><span>Home</span></a> |
   <a href="/how"><span>How does it work?</span></a> | 
-  <a href="http://microtasking.blogspot.com/2009/07/screencast-1.html"><span>Video</span></a>
+  <a href="http://blog.microtasking.net/2009/07/screencast-1.html"><span>Video</span></a>
 </p>
 <p class="linkbar">
-  <a href="/faq"><span>FAQ</span></a> | <a href="http://microtasking.blogspot.com/"><span>Blog</span></a> |
+  <a href="/faq"><span>FAQ</span></a> | <a href="http://blog.microtasking.net/"><span>Blog</span></a> |
   <a href="https://twitter.com/microtasking"><span>Twitter</span></a> | <a href="/about"><span>About</span></a>
 </p>
 <div class="footer">
