--- a/templates/ticket.html
+++ b/templates/ticket.html
@@ -3,6 +3,7 @@
 <ul>
 <li><label class="label">Payment Status</label> <span class="value">{{ ticket.financial_order_state }}</span></li>
 <li><span class="label">Hours</span> <span class="value">{{ ticket.hours }}</span></li>
+{% if ticket.additional %}<li><span class="label">Additional amount</span> <span class="value">{{ currency }}{{ ticket.additional|floatformat:2 }}</span></li>{% endif %}
 <li><span class="label">Name</span> <span class="value">{{ ticket.name }}</span></li>
 <li><span class="label">Email</span> <span class="value">{{ ticket.email }}</span></li>
 <li><span class="label">Address</span>
