rounded corners for the content boxes on all pages

--- a/static/standard.css
+++ b/static/standard.css
@@ -226,7 +226,7 @@ body {
 /* static contentx box */
 .staticbox {
 	background: white;
-	padding: 20px;
+	padding: 10px 20px;
 }
 
 /* navigation bar */
@@ -268,7 +268,6 @@ body {
 /* tickets */
 .ticket {
   background-color:white;
-  padding:10px;
 }
 .ticket .date {
   font-size:1.5em;
@@ -277,7 +276,7 @@ body {
 }
 .ticket .label {
   font-weight:bold;
-  width:9em;
+  width:10em;
   float:left;
 }
 .ticket .value {
