--- a/templates/how.html
+++ b/templates/how.html
@@ -1,9 +1,13 @@
-<div class="staticbox">
+<div class="box">
+<div class="top"><div class="right"></div><div class="left"></div></div>
+<div class="middle staticbox">
 
 <h3>How microtasking works</h3>
 <p>Here's a quick overview, so you know what to expect:</p>
 <p><img src="/static/images/diagram.png" /></p>
 <p>Questions? Read the <a href="/faq" title="FAQ">FAQ</a> or watch a <a href="http://microtasking.blogspot.com/2009/07/screencast-1.html" title="Introductory Screencast">Video</a>. <!-- or email us: <a href="mailto:contact@microtasking.net">contact@microtasking.net</a>--></p>
 
-
 </div>
+<div class="bottom"><div class="right"></div><div class="left"></div></div>
+</div>
+
