--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,6 @@
-<div class="staticbox">
+<div class="box">
+<div class="top"><div class="right"></div><div class="left"></div></div>
+<div class="middle staticbox">
 
 <h3 id="definition">What is Microtasking?</h3>
 <p>
@@ -26,4 +28,8 @@
   but we are staffed by the best and brightest world-wide. The Internet has no borders,
   and neither do we.
 </p>
+
 </div>
+<div class="bottom"><div class="right"></div><div class="left"></div></div>
+</div>
+
