--- a/templates/additional.html
+++ b/templates/additional.html
@@ -1,4 +1,6 @@
-<div class="staticbox">
+<div class="box">
+<div class="top"><div class="right"></div><div class="left"></div></div>
+<div class="middle staticbox">
 
 <h3 id="definition">What is the Additional amount?</h3>
 <p>
@@ -24,3 +26,6 @@
 </p>
 
 </div>
+<div class="bottom"><div class="right"></div><div class="left"></div></div>
+</div>
+
