--- a/templates/examples.html
+++ b/templates/examples.html
@@ -1,4 +1,6 @@
-<div class="staticbox">
+<div class="box">
+<div class="top"><div class="right"></div><div class="left"></div></div>
+<div class="middle staticbox">
 
 <h3>Example Good Task Request</h3>
 <blockquote>
@@ -15,3 +17,6 @@
 <p class="cons"></p>
 
 </div>
+<div class="bottom"><div class="right"></div><div class="left"></div></div>
+</div>
+
