--- a/templates/faq.html
+++ b/templates/faq.html
@@ -1,4 +1,6 @@
-<div class="staticbox">
+<div class="box">
+<div class="top"><div class="right"></div><div class="left"></div></div>
+<div class="middle staticbox">
 
 <h3 id="definition">What are Microtasks?</h3>
 <p>Any short (between 1 to 4 hour) task that can be easily defined and delegated to someone else</p>
@@ -63,5 +65,7 @@
   Your satisfaction is our highest priority, and we continually strive to complete every task dilligently and quickly.
 </p>
 
+</div>
+<div class="bottom"><div class="right"></div><div class="left"></div></div>
 </div>
 
