--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -1,4 +1,6 @@
-<div class="staticbox">
+<div class="box">
+<div class="top"><div class="right"></div><div class="left"></div></div>
+<div class="middle staticbox">
 
 Effective <b>7/17/2009</b>
 <p><b>Privacy Notice Table Of Contents:</b></p>
@@ -58,5 +60,7 @@ Effective <b>7/17/2009</b>
 <a name="8"></a><h3>How To Contact Us</h3>
 <p>Should you have other questions or concerns about these privacy policies, please <!-- call us at [phone number] or --> send us an email at contact@microtasking.net.</p>
 
+</div>
+<div class="bottom"><div class="right"></div><div class="left"></div></div>
 </div>
 
