--- a/templates/outer.html
+++ b/templates/outer.html
@@ -17,9 +17,9 @@
 </div>
 </div>
 <p class="navbar">
-  <a href="/{{ promo }}"><span>Home</span></a> |
-  <a href="/how"><span>How does it work?</span></a> | 
-  <a href="http://blog.microtasking.net/2009/07/screencast-1.html"><span>Video</span></a>
+  <a href="/{{ promo }}" title="Home" ><span>Home</span></a> |
+  <a href="/how" title="How does it work?" ><span>How does it work?</span></a> | 
+  <a href="/video" title="Video"><span>Video</span></a>
 </p>
 <p class="linkbar">
   <a href="/faq"><span>FAQ</span></a> | <a href="http://blog.microtasking.net/"><span>Blog</span></a> |
