--- a/templates/pages/how.html
+++ b/templates/pages/how.html
@@ -1,11 +1,45 @@
+<!-- FORM -->
+{{ form }}
+
+<!-- INFO -->
+<div class="box info">
+<div class="top"><div class="right"></div><div class="left"></div></div>
+<div class="middle">
+<img src="/static/images/diagram.png" alt="&quot;How it works&quot; diagram" />
+</div>
+<div class="bottom"><div class="right"></div><div class="left"></div></div>
+</div>
+
+<!-- EXTRA INFO -->
 <div class="box">
 <div class="top"><div class="right"></div><div class="left"></div></div>
 <div class="middle staticbox">
 
-<h3>How microtasking works</h3>
-<p>Here's a quick overview, so you know what to expect:</p>
-<p><img src="/static/images/diagram.png" /></p>
-<p>Questions? Read the <a href="/faq" title="FAQ">FAQ</a> or watch a <a href="/video" title="Video">Video</a>. <!-- or email us: <a href="mailto:contact@microtasking.net">contact@microtasking.net</a>--></p>
+<h3 id="how">How does it work?</h3>
+<p>
+	We believe that there is beauty in simplicity.  Provide us with a task that
+	takes about an hour to complete, pay by credit card, and we'll take care of it.
+</p>
+<p>
+	Here are the general steps:
+</p>
+<ol>
+<li><p>Describe your microtask in as much detail as necessary. <span class="small"><a href="/examples" title="Examples">examples?</a></span></p></li>
+<li><p>Click the "Do My Work" button and proceed through the checkout steps.</p></li>
+<li><p>We'll reiew your request and ...</p>
+	<ol>
+		<li><p>If it's something we <em>cannot do</em>, we'll alert you via email and you will not be charged.</p></li>
+		<li><p>If it's something we <em>can do</em>, we'll confirm our plans via email.</p></li>
+	</ol>
+</li>
+<li><p>About 1 business day following the response email, we'll begin working on your task.  When we're finished, we'll charge your account and email you all results.</p></li>
+</ol>
+<p>
+	To see these steps in action, we encourage you to watch an introductory <a href="/video" title="Video">Video</a>.
+</p>
+<p>
+	More information about how microtasking works can be found in our <a href="/faq">FAQ</a>.
+</p>
 
 </div>
 <div class="bottom"><div class="right"></div><div class="left"></div></div>
