--- a/templates/pages/faq.html
+++ b/templates/pages/faq.html
@@ -1,3 +1,25 @@
+<!-- FORM -->
+{{ form }}
+
+<!-- INFO -->
+<div class="box info">
+<div class="top"><div class="right"></div><div class="left"></div></div>
+<div class="middle">
+<dl>
+<dt>frequently asked questions:</dt>
+<dd><a href="#definition" title="What are Microtasks?"><span>What are Microtasks?</span></a></dd>
+<dd><a href="#why" title="Why?"><span>Why?</span></a></dd>
+<dd><a href="#who" title="Who is this for?"><span>Who is this for?</span></a></dd>
+<dd><a href="#ideas" title="What kinds of tasks can I delegate?"><span>What kinds of tasks can I delegate?</span></a></dd>
+<dd><a href="#taskers" title="Who does these tasks?"><span>Who does these tasks?</span></a></dd>
+<dd><a href="#specifics" title="How specific should I be?"><span>How specific should I be?</span></a></dd>
+<dd><a href="#time" title="What if my microtask takes more than four hours?"><span>What if my microtask takes more than four hours?</span></a></dd>
+</dl>
+</div>
+<div class="bottom"><div class="right"></div><div class="left"></div></div>
+</div>
+
+<!-- EXTRA INFO -->
 <div class="box">
 <div class="top"><div class="right"></div><div class="left"></div></div>
 <div class="middle staticbox">
