--- a/templates/pages/how.html
+++ b/templates/pages/how.html
@@ -17,8 +17,8 @@
 
 <h3 id="how">How does it work?</h3>
 <p>
-	We believe that there is beauty in simplicity.  Provide us with a task that
-	takes about an hour to complete, pay by credit card, and we'll take care of it.
+	We believe that there is beauty in simplicity.  Provide us with a
+	short, remote task, pay by credit card, and we'll take care of it.
 </p>
 <p>
 	Here are the general steps:
@@ -26,7 +26,7 @@
 <ol>
 <li><p>Describe your microtask in as much detail as necessary. <span class="small"><a href="/examples" title="Examples">examples?</a></span></p></li>
 <li><p>Click the "Do My Work" button and proceed through the checkout steps.</p></li>
-<li><p>We'll reiew your request and ...</p>
+<li><p>We'll review your request and ...</p>
 	<ol>
 		<li><p>If it's something we <em>cannot do</em>, we'll alert you via email and you will not be charged.</p></li>
 		<li><p>If it's something we <em>can do</em>, we'll confirm our plans via email.</p></li>
