--- a/templates/outer.html
+++ b/templates/outer.html
@@ -17,12 +17,12 @@
 </div>
 </div>
 <p class="navbar">
-  <a href="/{{ promo }}" title="Home" ><span>Home</span></a> |
   <a href="/how" title="How does it work?" ><span>How does it work?</span></a> | 
-  <a href="/video" title="Video"><span>Video</span></a>
+  <a href="/video" title="Video"><span>Video</span></a> |
+  <a href="/faq"><span>FAQ</span></a>
 </p>
 <p class="linkbar">
-  <a href="/faq"><span>FAQ</span></a> | <a href="http://blog.microtasking.net/"><span>Blog</span></a> |
+  <a href="http://blog.microtasking.net/"><span>Blog</span></a> |
   <a href="https://twitter.com/microtasking"><span>Twitter</span></a> | <a href="/about"><span>About</span></a>
 </p>
 <div class="footer">
