added search engine metadata

--- a/templates/outer.html
+++ b/templates/outer.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="Content-Style-Type" content="text/css" />
+<meta name="verify-v1" content="sRJ6G6J/MVC3d1SY7x+wIDSTp0VoW8umr6hL7i1CglM=" />
 <link rel="shortcut icon" href="/static/images/{{ favicon }}" />
 <link rel="stylesheet" href="/static/base.css" type="text/css" media="screen" />
 <link rel="stylesheet" href="/static/{{ stylesheet }}.css" type="text/css" media="screen" />
