--- a/templates/pages/guarantee.html
+++ b/templates/pages/guarantee.html
@@ -12,7 +12,7 @@
 <p>
   The refund applies only to the hour rate, and not for any extra amount submitted.
   In order to qualify for the money back program, you must have purchased a microtask from
-  us within the last 30 days. Send an email to <a href="refund@microtasking.net">refund@microtasking.net</a>
+  us within the last 30 days. Send an email to <a href="mailto:refund@microtasking.net">refund@microtasking.net</a>
   with the following information:
   <ul>
     <li>Your Name</li>
